# ShotTransitionsDetection

./: ExtractFeatures-FC.cpp  README.md
Distance/: CalculateDistance.hpp  FeaturesAndDistance.cpp  a.out
ExtractFeatures/: ExtractFeatures.hpp  README.md  a.out  featureProcess.cpp  squzzeNet.prototxt  video_list
FeatureDistance/: CalculateDistance.cpp  CalculateDistance.hpp  ExtractDataFromDB.cpp  ExtractDataFromDB.hpp  a.out  featureProcess.cpp  squzzeNet.prototxt  video_list
calculateDistance/: CMakeLists.txt  README.md  main.cpp  squzzeNet.prototxt  video_list
